test/portability/nosizeof.good
nosizeof.chpl:18: error: unresolved call 'sizeof(int(64))'
